...

@main
struct FlowtApp: App {
    @StateObject private var appState: AppState
    
    init() {
        if ProcessInfo.processInfo.environment["USE_MOCK_SERVICES"] != "1" { FirebaseApp.configure() }
        if ProcessInfo.processInfo.environment["SKIP_TERMS_AGREEMENT"] == "0" {
            UserDefaults.standard.set(false, forKey: "hasAcceptedTerms")
        } else if ProcessInfo.processInfo.environment["SKIP_TERMS_AGREEMENT"] == "1" {
            UserDefaults.standard.set(true, forKey: "hasAcceptedTerms")
        }
        
        let appState = AppState()
...
