...
            .padding(.horizontal, 20)
        }
        .frame(height: 80)
        .padding(.horizontal, 20)
        .padding(.bottom, 20)
        .accessibilityElement(children: .ignore)
        .accessibilityIdentifier("mainMenu_tabBar")
    }
}

#if DEBUG
#Preview {
    let appState = AppState()
...
